--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="main-box clearfix">
                     <div class="logo-box pull-left py-5">
-                        <a href="#" class="logo py-3"><h2>PLC Lab</h2> <span></span></a>
+                        <a href="#" class="logo py-3"><h2>PLC <span class="">Lab</span></h2> </a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -116,7 +116,7 @@
                 <ul>
                     <li>Bujumbura , Burundi </li>
                     <li><a href="tel:+25761103320">+257 61 10 33 20</a></li>
-                    <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                    <li><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                 </ul>
             </div>
             <div class="social-links">
@@ -285,7 +285,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 counter-block">
                             <div class="inner-box wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="count-outer count-box">
-                                    <span class="count-text" data-speed="1500" data-stop="50">0</span><span>+</span>
+                                    <span class="count-text" data-speed="1500" data-stop="30">0</span><span>+</span>
                                 </div>
                                 <h2>Projets réalisés</h2>
                             </div>
@@ -293,7 +293,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 counter-block">
                             <div class="inner-box wow slideInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
                                 <div class="count-outer count-box">
-                                    <span class="count-text" data-speed="1500" data-stop="98">0</span><span>%</span>
+                                    <span class="count-text" data-speed="1500" data-stop="90">0</span><span>%</span>
                                 </div>
                                 <h2>Clients satisfaits</h2>
                             </div>
@@ -301,7 +301,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 counter-block">
                             <div class="inner-box wow slideInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="count-outer count-box">
-                                    <span class="count-text" data-speed="1500" data-stop="5">0</span><span>+</span>
+                                    <span class="count-text" data-speed="1500" data-stop="2">0</span><span>+</span>
                                 </div>
                                 <h2>Années d'expérience</h2>
                             </div>
@@ -314,7 +314,7 @@
     <!-- trusted-section end -->
 
     <!-- testimonial-style-eight -->
-    <section class="testimonial-style-eight">
+    <!-- <section class="testimonial-style-eight">
         <div class="image-layer" style="background-image: url(images/icons/testimonial-bg-5.png);"></div>
         <div class="container">
             <div class="sec-title center">
@@ -357,7 +357,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- testimonial-style-eight end -->
 
     <!-- subscribe-section -->
@@ -426,7 +426,10 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="about-widget footer-widget">
-                                <figure class="footer-logo"><a href="index.html"><img src="images/footer-logo-2.png" alt="PLC Lab"></a></figure>
+                                <figure class="footer-logo"><a href="index.html">
+                                    <!-- <img src="images/footer-logo-2.png" alt="PLC Lab"> -->
+                                     <h2 style="font-size: 3rem;">PLC <span class="text-warning">Lab</span></h2>
+                                </a></figure>
                                 <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique grâce à notre expertise technique et notre approche collaborative.</div>
                                 <ul class="social-links">
                                     <li><h6>Suivez-nous :</h6></li>
@@ -479,7 +482,7 @@
                                         </li>
                                         <li>
                                             <i class="fas fa-envelope"></i>
-                                            <a href="mailto:contact@plclab.fr">contact@plclab.fr</a>
+                                            <a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a>
                                         </li>
                                         <li>
                                             <i class="fas fa-clock"></i>
