--- a/notre-equipe.html
+++ b/notre-equipe.html
@@ -125,7 +125,7 @@
                 <ul>
                     <li>Bujumbura , Burundi </li>
                      <!-- <li><a href="tel:+25761103320">+257 61 10 33 20</a></li> -->
-                    <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                    <li><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                 </ul>
             </div>
             <div class="social-links">
@@ -174,8 +174,8 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 team-block">
                     <div class="team-block-one wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                         <div class="inner-box">
-                            <figure class="image-box">
-                                <img src="images/resource/team-1.png" alt="Alexandre Martin">
+                            <!-- <figure class="image-box">
+                                <img src="images/resource/team-.png" alt="">
                                 <div class="share-box">
                                     <p>Suivez-moi</p>
                                     <ul class="social-links clearfix">
@@ -184,9 +184,9 @@
                                         <li><a href="#"><i class="fab fa-github"></i></a></li>
                                     </ul>
                                 </div>
-                            </figure>
+                            </figure> -->
                             <div class="lower-content">
-                                <h3><a href="#">Alexandre Martin</a></h3>
+                                <h3><a href="#">Dieudonne </a></h3>
                                 <span class="designation">Fondateur & Lead Developer</span>
                                 <div class="text">
                                     Expert en architecture logicielle avec 10 ans d'expérience. Spécialiste des technologies JavaScript et des architectures cloud.
@@ -202,7 +202,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 team-block">
                     <div class="team-block-one wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
                         <div class="inner-box">
-                            <figure class="image-box">
+                            <!-- <figure class="image-box">
                                 <img src="images/resource/team-2.jpg" alt="Sophie Dubois">
                                 <div class="share-box">
                                     <p>Suivez-moi</p>
@@ -212,16 +212,16 @@
                                         <li><a href="#"><i class="fab fa-behance"></i></a></li>
                                     </ul>
                                 </div>
-                            </figure>
+                            </figure> -->
                             <div class="lower-content">
-                                <h3><a href="#">Sophie Dubois</a></h3>
-                                <span class="designation">UI/UX Designer & Sécurité</span>
+                                <h3><a href="#">Audry </a></h3>
+                                <span class="designation">UI/UX Designer </span>
                                 <div class="text">
                                     Spécialiste en design d'interface et expérience utilisateur. Passionnée par la création d'interfaces intuitives et sécurisées.
                                 </div>
                                 <ul class="info-list">
-                                    <li><i class="fas fa-envelope"></i> sophie@plclab.fr</li>
-                                    <li><i class="fas fa-phone"></i> +33 1 23 45 67 91</li>
+                                    <!-- <li><i class="fas fa-envelope"></i> sophie@plclab.fr</li> -->
+                                    <!-- <li><i class="fas fa-phone"></i> </li> -->
                                 </ul>
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 team-block">
                     <div class="team-block-one wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                         <div class="inner-box">
-                            <figure class="image-box">
+                            <!-- <figure class="image-box">
                                 <img src="images/resource/team-3.jpg" alt="Thomas Leroy">
                                 <div class="share-box">
                                     <p>Suivez-moi</p>
@@ -240,16 +240,16 @@
                                         <li><a href="#"><i class="fab fa-github"></i></a></li>
                                     </ul>
                                 </div>
-                            </figure>
+                            </figure> -->
                             <div class="lower-content">
-                                <h3><a href="#">Thomas Leroy</a></h3>
+                                <h3><a href="#">Urbain </a></h3>
                                 <span class="designation">Développeur Full-Stack</span>
                                 <div class="text">
                                     Polyvalent et créatif, excelle dans le développement frontend et backend avec les technologies modernes React, Node.js et Python.
                                 </div>
                                 <ul class="info-list">
-                                    <li><i class="fas fa-envelope"></i> thomas@plclab.fr</li>
-                                    <li><i class="fas fa-phone"></i> +33 1 23 45 67 92</li>
+                                    <!-- <li><i class="fas fa-envelope"></i> thomas@plclab.fr</li> -->
+                                    <!-- <li><i class="fas fa-phone"></i> +33 1 23 45 67 92</li> -->
                                 </ul>
                             </div>
                         </div>
@@ -258,7 +258,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 team-block">
                     <div class="team-block-one wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                         <div class="inner-box">
-                            <figure class="image-box">
+                            <!-- <figure class="image-box">
                                 <img src="images/resource/team-4.jpg" alt="Camille Petit">
                                 <div class="share-box">
                                     <p>Suivez-moi</p>
@@ -267,16 +267,16 @@
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     </ul>
                                 </div>
-                            </figure>
+                            </figure> -->
                             <div class="lower-content">
-                                <h3><a href="#">Camille Petit</a></h3>
-                                <span class="designation">Chef de Projet</span>
+                                <h3><a href="#">Délice Liesse Birasa</a></h3>
+                                <span class="designation">Chef de Projet (DAF)</span>
                                 <div class="text">
                                     Garant de la bonne gestion des projets et de la satisfaction client, avec une approche méthodique et organisée.
                                 </div>
                                 <ul class="info-list">
-                                    <li><i class="fas fa-envelope"></i> camille@plclab.fr</li>
-                                    <li><i class="fas fa-phone"></i> +33 1 23 45 67 93</li>
+                                    <!-- <li><i class="fas fa-envelope"></i> camille@plclab.fr</li> -->
+                                    <!-- <li><i class="fas fa-phone"></i> +33 1 23 45 67 93</li> -->
                                 </ul>
                             </div>
                         </div>
@@ -285,7 +285,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 team-block">
                     <div class="team-block-one wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
                         <div class="inner-box">
-                            <figure class="image-box">
+                            <!-- <figure class="image-box">
                                 <img src="images/resource/team-5.jpg" alt="Lucas Moreau">
                                 <div class="share-box">
                                     <p>Suivez-moi</p>
@@ -295,110 +295,28 @@
                                         <li><a href="#"><i class="fab fa-stack-overflow"></i></a></li>
                                     </ul>
                                 </div>
-                            </figure>
+                            </figure> -->
                             <div class="lower-content">
-                                <h3><a href="#">Lucas Moreau</a></h3>
-                                <span class="designation">Expert DevOps & Cloud</span>
+                                <h3><a href="#">Santa Israëlla Nshimirimana </a></h3>
+                                <span class="designation">Responsable Marketing</span>
                                 <div class="text">
-                                    Spécialiste en infrastructure cloud, CI/CD et automatisation. Expert AWS, Docker et Kubernetes.
+                                    Specialiste en Marketing.
                                 </div>
                                 <ul class="info-list">
-                                    <li><i class="fas fa-envelope"></i> lucas@plclab.fr</li>
-                                    <li><i class="fas fa-phone"></i> +33 1 23 45 67 94</li>
+                                    <!-- <li><i class="fas fa-envelope"></i> lucas@plclab.fr</li> -->
+                                    <!-- <li><i class="fas fa-phone"></i> +33 1 23 45 67 94</li> -->
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 team-block">
-                    <div class="team-block-one wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
-                        <div class="inner-box">
-                            <figure class="image-box">
-                                <img src="images/resource/team-6.jpg" alt="Émilie Rousseau">
-                                <div class="share-box">
-                                    <p>Suivez-moi</p>
-                                    <ul class="social-links clearfix">
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-medium"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                    </ul>
-                                </div>
-                            </figure>
-                            <div class="lower-content">
-                                <h3><a href="#">Émilie Rousseau</a></h3>
-                                <span class="designation">Développeuse Mobile</span>
-                                <div class="text">
-                                    Experte en développement d'applications iOS et Android natives. Passionnée par les technologies React Native et Flutter.
-                                </div>
-                                <ul class="info-list">
-                                    <li><i class="fas fa-envelope"></i> emilie@plclab.fr</li>
-                                    <li><i class="fas fa-phone"></i> +33 1 23 45 67 95</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
     <!-- team-section end -->
 
-    <!-- expertise-section -->
-    <section class="expertise-section">
-        <div class="container">
-            <div class="sec-title center">
-                <h2>Nos Domaines d'Expertise</h2>
-                <p>Une équipe pluridisciplinaire couvrant tous les aspects du développement logiciel</p>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-12 expertise-block">
-                    <div class="expertise-block-one">
-                        <div class="inner-box">
-                            <div class="icon-box">
-                                <i class="flaticon-web-development"></i>
-                            </div>
-                            <h3>Développement Web</h3>
-                            <div class="text">Applications web modernes avec React, Vue.js, Angular et Node.js</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 expertise-block">
-                    <div class="expertise-block-one">
-                        <div class="inner-box">
-                            <div class="icon-box">
-                                <i class="flaticon-smartphone"></i>
-                            </div>
-                            <h3>Applications Mobiles</h3>
-                            <div class="text">Solutions iOS, Android et cross-platform avec React Native et Flutter</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 expertise-block">
-                    <div class="expertise-block-one">
-                        <div class="inner-box">
-                            <div class="icon-box">
-                                <i class="flaticon-cloud-computing"></i>
-                            </div>
-                            <h3>Architecture Cloud</h3>
-                            <div class="text">Infrastructure scalable avec AWS, Azure et solutions serverless</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 expertise-block">
-                    <div class="expertise-block-one">
-                        <div class="inner-box">
-                            <div class="icon-box">
-                                <i class="flaticon-shield"></i>
-                            </div>
-                            <h3>Sécurité</h3>
-                            <div class="text">Audits de sécurité, conformité RGPD et bonnes pratiques OWASP</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- expertise-section end -->
+
 
     <!-- cta-section -->
     <section class="cta-section">
@@ -464,7 +382,7 @@
                                     <ul class="contact-info clearfix">
                                         <li><i class="fas fa-map-marker-alt"></i> Bujumbura , Burundi </li>
                                         <li><i class="fas fa-phone"></i><a href="tel:+25761103320">+257 61 10 33 20</a></li>
-                                        <li><i class="fas fa-envelope"></i><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                                        <li><i class="fas fa-envelope"></i><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -526,7 +444,7 @@
                             <ul>
                                 <li>Bujumbura , Burundi </li>
                                  <!-- <li><a href="tel:+25761103320">+257 61 10 33 20</a></li> -->
-                                <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                                <li><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                             </ul>
                         </div>
                         <!-- Social Box -->
