--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -127,7 +127,7 @@
                 <ul>
                     <li>Bujumbura , Burundi </li>
                      <!-- <li><a href="tel:+25761103320">+257 61 10 33 20</a></li> -->
-                    <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                    <li><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                 </ul>
             </div>
             <div class="social-links">
@@ -425,7 +425,7 @@
                                     <ul class="contact-info clearfix">
                                         <li><i class="fas fa-map-marker-alt"></i> Bujumbura , Burundi </li>
                                         <li><i class="fas fa-phone"></i><a href="tel:+25761103320">+257 61 10 33 20</a></li>
-                                        <li><i class="fas fa-envelope"></i><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                                        <li><i class="fas fa-envelope"></i><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                                     </ul>
                                 </div>
                             </div>
