--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
 <!-- Google Fonts -->
-<!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet"> -->
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
 
 <!-- Stylesheets -->
 <link href="css/font-awesome-all.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 <body class="boxed_wrapper">
 
     <!-- preloader -->
-    <!-- <div class="preloader"></div> -->
+    <div class="preloader"></div>
     <!-- preloader -->
 
     <!-- main header -->
@@ -37,8 +37,8 @@
         <div class="outer-container">
             <div class="container">
                 <div class="main-box clearfix">
-                  <div class="logo-box pull-left py-5">
-                        <a href="#" class="logo py-3"><h2>PLC Lab</h2> <span></span></a>
+                    <div class="logo-box pull-left">
+                        <figure class="logo"><a href="index.html"><img src="images/logo-4.png" alt="PLC Lab"></a></figure>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -125,9 +125,9 @@
             <div class="contact-info">
                 <h4>Coordonnées</h4>
                 <ul>
-                    <li>Bujumbura , Burundi </li>
-                     <!-- <li><a href="tel:+25761103320">+257 61 10 33 20</a></li> -->
-                    <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                    <li>Paris, France</li>
+                    <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                    <li><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                 </ul>
             </div>
             <div class="social-links">
@@ -304,7 +304,7 @@
     <!-- portfolio-section end -->
 
     <!-- stats-section -->
-    <section class="stats-section">
+    <!-- <section class="stats-section">
         <div class="container">
             <div class="inner-container">
                 <div class="sec-title center">
@@ -312,6 +312,7 @@
                     <p>Des résultats concrets qui témoignent de notre expertise</p>
                 </div>
                 <div class="row">
+                    
                     <div class="col-lg-3 col-md-6 col-sm-12 counter-block">
                         <div class="counter-box">
                             <div class="count-outer count-box">
@@ -347,11 +348,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- stats-section end -->
 
     <!-- testimonial-section -->
-    <section class="testimonial-section">
+    <!-- <section class="testimonial-section">
         <div class="container">
             <div class="sec-title center">
                 <h2>Ce Que Disent Nos Clients</h2>
@@ -402,7 +403,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- testimonial-section end -->
 
     <!-- cta-section -->
@@ -444,8 +445,8 @@
                                 <ul class="social-links clearfix">
                                     <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <!-- <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-github"></i></a></li> -->
+                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -467,9 +468,9 @@
                                 <h4 class="widget-title">Contact</h4>
                                 <div class="widget-content">
                                     <ul class="contact-info clearfix">
-                                        <li><i class="fas fa-map-marker-alt"></i> Bujumbura , Burundi </li>
-                                        <li><i class="fas fa-phone"></i><a href="tel:+25761103320">+257 61 10 33 20</a></li>
-                                        <li><i class="fas fa-envelope"></i><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                                        <li><i class="fas fa-map-marker-alt"></i> Paris, France</li>
+                                        <li><i class="fas fa-phone"></i><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                                        <li><i class="fas fa-envelope"></i><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -508,6 +509,7 @@
     <span class="fa fa-arrow-up"></span>
 </button>
 
+<!-- jequery plugins -->
 <script src="js/jquery.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -522,6 +524,7 @@
 <script src="js/nav-tool.js"></script>
 <script src="js/jquery.paroller.min.js"></script>
 <script src="js/tilt.jquery.js"></script>
+<script src="js/isotope.js"></script>
 
 <!-- main-js -->
 <script src="js/script.js"></script>
