--- a/contact.html
+++ b/contact.html
@@ -265,76 +265,85 @@
 
 
     <!-- main-footer -->
-    <footer class="main-footer style-five style-six">
+    <!-- main-footer -->
+    <footer class="main-footer style-two style-three">
         <div class="anim-icons">
-            <div class="icon icon-1"><img src="images/icons/pattern-21.png" alt=""></div>
+            <div class="icon icon-1"></div>
+            <div class="icon icon-2"></div>
+            <div class="icon icon-3"></div>
+            <div class="icon icon-4"></div>
+            <div class="icon icon-5"></div>
+            <div class="icon icon-6"></div>
+            <div class="icon icon-7"></div>
+            <div class="icon icon-8"></div>
+            <div class="icon icon-9"></div>
+            <div class="icon icon-10"></div>
         </div>
-        <div class="image-layer" style="background-image: url(images/icons/footer-bg-6.png);"></div>
         <div class="container">
             <div class="footer-top">
                 <div class="widget-section">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="about-widget footer-widget">
-                                <figure class="footer-logo"><a href="index.html"><img src="images/footer-logo-2.png" alt=""></a></figure>
-                                <div class="text">Lorem ipsum dolor sit consectetur adipisicing elit, sed do eiusmod tempor .........</div>
-                                <div class="apps-download">
-                                    <h3>Download the App</h3>
-                                    <div class="download-btn">
-                                        <a href="#" class="app-store-btn">
-                                            <i class="fab fa-apple"></i>
-                                            <span>Download on the</span>
-                                            App Store
-                                        </a>
-                                        <a href="#" class="google-play-btn">
-                                            <i class="fab fa-android"></i>
-                                            <span>Get on it</span>
-                                            Google Play
-                                        </a>
-                                    </div>
+                                <figure class="footer-logo"><a href="index.html"><img src="images/footer-logo-2.png" alt="PLC Lab"></a></figure>
+                                <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique grâce à notre expertise technique et notre approche collaborative.</div>
+                                <ul class="social-links">
+                                    <li><h6>Suivez-nous :</h6></li>
+                                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                                    <!--<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li> -->
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                            <div class="links-widget footer-widget">
+                                <h4 class="widget-title">Services</h4>
+                                <div class="widget-content">
+                                    <ul class="list clearfix">
+                                        <li><a href="#">Développement Web</a></li>
+                                        <li><a href="#">Applications Mobiles</a></li>
+                                        <li><a href="#">Logiciels Desktop</a></li>
+                                        <li><a href="#">Solutions Cloud</a></li>
+                                        <li><a href="#">Maintenance & Support</a></li>
+                                        <li><a href="#">Conseil Technique</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-6 col-sm-12 footer-column">
                             <div class="links-widget footer-widget">
-                                <h4 class="widget-title">Services</h4>
+                                <h4 class="widget-title">Liens rapides</h4>
                                 <div class="widget-content">
                                     <ul class="list clearfix">
-                                        <li><a href="#">Business Dashboards</a></li>
-                                        <li><a href="#">Sales Analytics</a></li>
-                                        <li><a href="#">Digital Marketing</a></li>
-                                        <li><a href="#">Financial Help</a></li>
+                                        <li><a href="index.html">Accueil</a></li>
+                                        <li><a href="a-propos.html">À propos</a></li>
+                                        <li><a href="portfolio.html">Portfolio</a></li>
+                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                        <!-- <li><a href="mentions-legales.html">Mentions légales</a></li> -->
                                     </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="contact-widget footer-widget">
-                                <h4 class="widget-title">Contact Us</h4>
-                                <div class="widget-content">
-                                    <ul class="contact-info clearfix">
-                                        <li><i class="fas fa-map-marker-alt"></i> 25 Bedford St. New York City.</li>
-                                        <li><i class="fas fa-phone"></i><a href="tel:0665184575181">(+066) 518 - 457 - 5181</a></li>
-                                        <li><i class="fas fa-envelope"></i><a href="mailto:info@example.com">info@example.com</a></li>
-                                    </ul>
-                                </div>
-                                <ul class="social-links clearfix">
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-skype"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
-                            <div class="links-widget footer-widget">
-                                <h4 class="widget-title">About Company</h4>
+                                <h4 class="widget-title">Contact</h4>
                                 <div class="widget-content">
                                     <ul class="list clearfix">
-                                        <li><a href="#">Appway Online</a></li>
-                                        <li><a href="#">Our Leadership</a></li>
-                                        <li><a href="#">Carrers</a></li>
-                                        <li><a href="#">What We Do</a></li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Bujumbura , Burundi </li>
+                                        <li>
+                                            <i class="fas fa-phone-volume"></i>
+                                            <a href="tel:+25761103320">+257 61 10 33 20</a>
+                                        </li>
+                                        <li>
+                                            <i class="fas fa-envelope"></i>
+                                            <a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a>
+                                        </li>
+                                        <li>
+                                            <i class="fas fa-clock"></i>
+                                            Lun - Ven: 9h00 - 18h00
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -342,16 +351,12 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-bottom clearfix">
-                <ul class="footer-nav pull-right">
-                    <li><a href="#">Terms of Service</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Legal</a></li>
-                </ul>
+            <div class="footer-bottom">
+                <div class="copyright">&copy; 2024 <a href="index.html">PLC Lab</a>. Tous droits réservés</div>
             </div>
         </div>
-        <div class="copyright">&copy; 2020 <a href="#">appway</a>. All rights reserved</div>
     </footer>
+    <!-- main-footer end -->
     <!-- main-footer end -->
 
 
