--- a/startup.html
+++ b/startup.html
@@ -108,7 +108,7 @@
                 <ul>
                     <li>Bujumbura , Burundi </li>
                      <!-- <li><a href="tel:+25761103320">+257 61 10 33 20</a></li> -->
-                    <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                    <li><a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a></li>
                 </ul>
             </div>
             <div class="social-links">
@@ -471,7 +471,7 @@
                                         </li>
                                         <li>
                                             <i class="fas fa-envelope"></i>
-                                            <a href="mailto:contact@plclab.fr">contact@plclab.fr</a>
+                                            <a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a>
                                         </li>
                                         <li>
                                             <i class="fas fa-clock"></i>
